--- a/EngineCraneExporter/EngineCraneExporter.vcxproj.filters
+++ b/EngineCraneExporter/EngineCraneExporter.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
