Fix Win32 Debug build

--- a/EngineCraneExporter/EngineCraneExporter.vcxproj
+++ b/EngineCraneExporter/EngineCraneExporter.vcxproj
@@ -99,7 +99,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;ENGINECRANEEXPORTER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;ENGINECRANEEXPORTER_EXPORTS;_WINDOWS;_USRDLL;PROJECT_FILENAME=L"$(TargetName)$(TargetExt)";%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
